Complete basic exercises

--- a/blog_article.html
+++ b/blog_article.html
@@ -21,7 +21,8 @@
         font-family: Georgia, sans-serif;
         font-size: 18px;
         line-height: 30px;
-        margin: 0 350px 0 350px;
+        width: 696px;
+        margin-left: 350px;
     }
     figcaption {
         font: italic 14px/24px Georgia, serif;
